--- a/src/components/MarketingEditor/marketingEditor.css
+++ b/src/components/MarketingEditor/marketingEditor.css
@@ -13,9 +13,13 @@
 .editor {
 	border: 1px solid #f1f1f1;
 	overflow: scroll;
-	min-height: 45vh;
+	min-height: 35vh;
 	max-height: 65vh;
-	margin: 2.5rem 0;
+	margin: 1rem 0 2.4rem;
+	scroll-behavior: smooth;
+}
+.editor-textarea {
+	padding: 0.5rem;
 }
 .btn,
 .btn:active {
@@ -36,4 +40,10 @@
 	outline: none;
 	box-shadow: none;
 	background: #78abd4;
+}
+
+.select-text {
+	height: 47px;
+	border: 3px solid #efefef;
+	background: #efefef;
 }
